fix: scrolling body overflow hidden

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -9,10 +9,6 @@ html {
   font-family: 'Inter', sans-serif;
 }
 
-.medium-zoom--opened {
-  overflow: hidden;
-}
-
 h1, h2, h3, h4, h5, h6 {
   font-weight: 600 !important;
 }
